--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -1,7 +1,7 @@
 // Quasar SCSS (& Sass) Variables
 
-$primary   : #1976d2;
-$secondary : #26a69a;
+$primary   : #038;
+$secondary : #1a67ea;
 $accent    : #9c27b0;
 
 $dark      : #1d1d1d;
