--- a/src/css/pg.scss
+++ b/src/css/pg.scss
@@ -1,26 +1,55 @@
 :deep(.pg-problem-container) {
-	//@import "./bootstrap";
-
 	.problem-main-form {
 		margin-bottom: 0;
 	}
 
-	input[type="text"] {
-		margin-left: .5ex;
-		margin-right: .5ex;
+	label, input[type="text"], select, textarea {
+		font-size: 16px;
+		font-weight: normal;
+		line-height: 18px;
+		width: auto;
+	}
+
+	select, textarea, input[type="text"] {
 		display: inline-block;
-		margin-bottom: 0;
-		vertical-align: middle;
-		height: 30px;
 		padding: 4px 6px;
+		margin-bottom: 0;
+		color: #555;
+		vertical-align: middle;
 		border: 1px solid #ccc;
 		border-radius: 4px;
 		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		background-color: white;
+	}
+
+	input[type="text"] {
+		height: 30px;
 		font-size: 14px;
 		line-height: 20px;
-		color: #555;
-		background-color: #fff;
+	}
 
+	input[type="radio"] {
+		margin-right: 0.25rem;
+	}
+
+	select {
+		cursor: pointer;
+
+		&[multiple], &[size] {
+			height: auto;
+		}
+
+		&:focus {
+			outline: thin dotted #333;
+			outline-offset: -2px;
+		}
+	}
+
+	textarea {
+		max-width: 100%;
+	}
+
+	input[type="text"], textarea {
 		&:focus {
 			border-color: rgba(82, 168, 236, 0.8);
 			outline: 0;
