--- a/src/css/bootstrap.scss
+++ b/src/css/bootstrap.scss
@@ -23,3 +23,4 @@ $zindex-modal: 2055;
 @import "bootstrap/scss/close";
 @import "bootstrap/scss/modal";
 @import "bootstrap/scss/tooltip";
+@import "bootstrap/scss/popover";
